--- a/douglasindex.html
+++ b/douglasindex.html
@@ -1,6 +1,19 @@
+<!doctype html>
+<html lang='pt-br'>
+    <head>
+        <meta charset=''utf-8'>
+        <title>barbearia alura</title>
+    </head>
+    <body
+
+
+
+
 <h1> sobre a barbearia alura</h1>
 <p> localiza no coração da cidade a <strong>barbearia alura</strong> traz para o mercado o que hà de melhor para o seu cabelo e barba.
 fundada em 2019,a barbearia alura jà è destaque na cidade e conquinta novos clientes a cada dia.</p>
 <p><em> nossa missão è: <strong> 'proporcionar auto estima e qualidade de vida dos clientes'</strong>.</em></p>
 <p>oferecemos profissionais experientes e antenados às mudanças no mundo da moda
 o atendimento possui padrão de excelência a agilidade, garantindo qualidade e satisfação de nossos clientes.</p>
+<body
+</html>
